--- a/ana chaves - portfólio/index.html
+++ b/ana chaves - portfólio/index.html
@@ -23,8 +23,8 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
                 <div class="card">
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
-                        <p class="card-text">Este projeto é uma página web que apresenta uma lista dos meus livros favoritos, incluindo informações sobre os autores, datas de publicação e links para compra na Amazon. A página é estilizada com CSS para uma visualização agradável e usa fontes externas do Google Fonts.</p>
+                        <h5 class="card-title">Lógica de programação: desenvolvendo um jogo estilo Pong</h5>
+                        <p class="card-text">O desenvolvimento envolve a configuração do ambiente, a criação de elementos visuais, a implementação da lógica de movimento e colisões, e a adição de interatividade. </p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
                     </div>
                 </div>
@@ -34,8 +34,9 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial</h5>
-                        <p class="card-text">Este projeto é um jogo interativo baseado em navegador que explora o impacto e as implicações da Inteligência Artificial (IA) na sociedade, permitindo que as pessoas jogadoras façam escolhas que influenciam o desenrolar de uma narrativa sobre o futuro da IA.</p>
+                        <h5 class="card-title">Listas: criando o seu jogo de cartas com listas e padrões</h5>
+                        <p class="card-text">Para criar um jogo de cartas usando listas em programação, você pode representar o baralho como uma lista de listas ou tuplas, onde cada elemento representa uma carta. As cartas podem ser definidas por suas características como naipe e valor. Para criar a lógica do jogo, você pode usar funções para embaralhar o baralho, distribuir cartas entre os jogadores e definir as regras de jogo, como pontuação e movimentos permitidos. 
+</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
                     </div>
                 </div>
@@ -46,7 +47,7 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch</h5>
+                        <h5 class="card-title">Funções: desenvolvendo um recomendador de filmes com JavaScript</h5>
                         <p class="card-text">Este projeto Scratch cria uma experiência interativa educativa sobre astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a forma da Terra através de cenários dinâmicos e diálogos informativos.</p>
                         <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja o projeto</button>
                     </div>
