--- a/ana chaves - portfólio/index.html
+++ b/ana chaves - portfólio/index.html
@@ -1,12 +1,23 @@
-Aqui está o código atualizado a partir da linha 17, substituindo o nome "Fernanda" por "Ana Chaves" e fazendo ajustes no conteúdo:
+<!DOCTYPE html>
+<html lang="pt-br">
 
-```html
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="style.css">
+    <title>Meu portfólio</title>
+</head>
+
 <body>
     <header class="container text-center">
-        <img src="img/avatar-perfil.png" alt="avatar da Ana Chaves" class="rounded-circle" width="150" height="150" srcset="">
+        <img src="img/avatar aninha.png alt= alt=" avatar da Fernanda class="rounded-circle" width="150" height="150"
+            srcset="">
         <p class="lead">Eu sou Ana Chaves</p>
         <h1>Sou estudante protagonista da E.E. PROF ASTROGILDO ARRUDA</h1>
-        <p>Sou estudante e estou em busca de ampliar meus conhecimentos na área de programação. Estou aprendendo HTML, CSS e JavaScript. Veja os projetos que já desenvolvi!</p>
+        <p>Sou estudante e estou em busca de ampliar meus conhecimentos na área de programação. Estou aprendendo HTML, CSS e JavaScript.
+             Veja os projetos que já desenvolvi!</p>
         <p>Minhas habilidades</p>
         <div>
             <p class="badge bg-secondary">HTML</p>
@@ -24,8 +35,11 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
                     <img src="img/projeto-1.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
                         <h5 class="card-title">Lógica de programação: desenvolvendo um jogo estilo Pong</h5>
-                        <p class="card-text">O desenvolvimento envolve a configuração do ambiente, a criação de elementos visuais, a implementação da lógica de movimento e colisões, e a adição de interatividade. </p>
-                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja o projeto</button>
+                        <p class="card-text">O desenvolvimento envolve a configuração do ambiente,
+                             a criação de elementos visuais, a implementação da lógica de movimento e colisões, e a adição de interatividade.
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal1">Veja
+                            o projeto</button>
                     </div>
                 </div>
             </div>
@@ -34,10 +48,16 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
                 <div class="card">
                     <img src="img/projeto-2.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Listas: criando o seu jogo de cartas com listas e padrões</h5>
-                        <p class="card-text">Para criar um jogo de cartas usando listas em programação, você pode representar o baralho como uma lista de listas ou tuplas, onde cada elemento representa uma carta. As cartas podem ser definidas por suas características como naipe e valor. Para criar a lógica do jogo, você pode usar funções para embaralhar o baralho, distribuir cartas entre os jogadores e definir as regras de jogo, como pontuação e movimentos permitidos. 
-</p>
-                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja o projeto</button>
+                        <h5 class="card-title">Listas: criando o seu jogo de cartas com listas e padrões.
+                         </h5>
+                        <p class="card-text">Para criar um jogo de cartas usando listas em programação, você pode representar
+                         o baralho como uma lista de listas ou tuplas, onde cada elemento representa uma carta. As cartas 
+                         podem ser definidas por suas características como naipe e valor. Para criar a lógica do jogo, você 
+                         pode usar funções para embaralhar o baralho, distribuir cartas entre os jogadores e definir as regras
+                         de jogo, como pontuação e movimentos permitidos.</p>
+                          
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal2">Veja
+                            o projeto</button>
                     </div>
                 </div>
             </div>
@@ -47,9 +67,16 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
                 <div class="card">
                     <img src="img/projeto-3.png" class="card-img-top" alt="Imagem do projeto de biblioteca virtual">
                     <div class="card-body">
-                        <h5 class="card-title">Funções: desenvolvendo um recomendador de filmes com JavaScript</h5>
-                        <p class="card-text">Este projeto Scratch cria uma experiência interativa educativa sobre astronomia, permitindo aos usuários explorar informações sobre constelações, eclipses, e a forma da Terra através de cenários dinâmicos e diálogos informativos.</p>
-                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja o projeto</button>
+                        <h5 class="card-title">Funções: desenvolvendo um recomendador de filmes com JavaScript
+                        </h5>
+                        <p class="card-text">Para desenvolver um sistema de recomendação de filmes em JavaScript, você
+                            pode começar criando funções para: 1- carregar e processar os dados dos filmes, 2- definir
+                            critérios de recomendação (como gênero, classificação indicativa, popularidade) e 3- gerar
+                            e exibir as recomendações. 
+ 
+                        </p>
+                        <button type="button" class="btn btn-link" data-bs-toggle="modal" data-bs-target="#modal3">Veja
+                            o projeto</button>
                     </div>
                 </div>
             </div>
@@ -61,41 +88,85 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Minha Biblioteca: Uma Webpage Personalizada</h5>
+                    <h5 class="modal-title">Lógica de programação: desenvolvendo um jogo estilo Pong</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
-                <div class="modal-body">
-                    <p>O projeto é uma página web criada com HTML e CSS, destinada a exibir uma coleção pessoal de livros favoritos. O objetivo é criar um ambiente virtual onde seja possível compartilhar seus livros preferidos, fornecendo uma descrição breve de cada um, incluindo o autor, o ano de publicação e uma opção de compra.</p>
-                    <p>A estrutura do site é baseada em HTML, que define a semântica e o layout do conteúdo, enquanto o CSS é usado para estilizar a página visualmente, incluindo cores, tipografia e a disposição dos elementos.</p>
-                    <p>O HTML organiza o conteúdo em um cabeçalho com o título do site, seguido por uma divisão principal (.container) que apresenta o propósito do site e a coleção de livros em uma seção flexível (.livros). Cada livro é destacado em seu próprio contêiner (.livro), mostrando uma imagem da capa, detalhes do livro e um link de compra. O design responsivo é garantido pelo uso de uma meta tag viewport e um layout flexível que se adapta a diferentes tamanhos de tela.</p>
-                    <p>O CSS personaliza o visual do site, usando variáveis para cores, estilizando o texto com uma fonte importada do Google Fonts e aplicando um esquema de cores suaves e botões interativos. O uso de HTML e CSS é importante pois assim é possível criar um site acessível e esteticamente agradável sem a necessidade de scripts complexos, com foco na usabilidade e na experiência da pessoa usuária. A escolha da tipografia e do esquema de cores contribui para a atmosfera acolhedora do site, incentivando a exploração da coleção de livros.</p>
-                    <img src="img/projeto-1.png" class="img-fluid w-100" alt="Imagem representativa do projeto de uma biblioteca online">
+                        <p>1. Preparação do Ambiente:
+                          Escolha da linguagem e biblioteca: Selecione uma linguagem de programação (como Python,
+                           JavaScript, ou C++) e uma biblioteca gráfica adequada para criar a interface do jogo
+                          (ex: Pygame, SFML, p5.js). 
+                          Configuração do ambiente: Instale a linguagem escolhida e a biblioteca, configure o
+                           ambiente de desenvolvimento (IDE ou editor de texto). . </p>
+                          <p>2. Desenho dos Elementos Visuais:
+                          Criação da tela: Defina o tamanho da tela do jogo e configure a cor de fundo. 
+                          Desenho das raquetes: Crie as raquetes como objetos gráficos (retângulos, por exemplo)
+                           e posicione-as nas extremidades laterais da tela. 
+                          Desenho da bola: Crie a bola como um objeto circular e defina sua posição inicial no centro da tela.  </p>
+                    <p>3. Lógica de Movimento:
+                         Movimento da bola: Implemente a lógica para mover a bola em um vetor de direção
+                          (horizontal e vertical) com uma velocidade inicial. 
+                         Movimento das raquetes: Implemente a lógica para mover as raquetes em resposta aos
+                          comandos do jogador (teclas) ou da inteligência artificial (no caso da raquete do oponente). 
+                         Colisão com as bordas: Adicione lógica para que a bola rebata nas paredes superior e inferior
+                         da tela. 
+                         Colisão com as raquetes: Implemente a lógica para verificar se a bola colidiu com alguma das
+                          raquetes e, em caso afirmativo, altere a direção da bola. </p>
+                    <p> 4. Adição de Interatividade:
+                         Controle da raquete do jogador: Utilize as teclas do teclado para mover a raquete do jogador. 
+                         Movimento da raquete do oponente: Crie a lógica para a raquete do oponente seguir a bola. 
+                         Pontuação: Adicione lógica para registrar a pontuação de cada jogador quando a bola sair da
+                          tela pela lateral oposta. </p>
+                    <img src="img/projeto-1.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/minhas-leituras/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/minhas-leituras">Ver código do projeto</a>
+                    <a href="https://editor.p5js.org/AnaLuiza1D/sketches/bM_9a3YYr">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
     </div>
-
     <!-- Modal 2 -->
     <div class="modal" id="modal2" tabindex="-1">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Decidindo o Futuro: Uma Jornada Interativa sobre a Inteligência Artificial</h5>
+                    <h5 class="modal-title">Listas: criando o seu jogo de cartas com listas e padrões.</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <p>O projeto consiste em uma aplicação web interativa, desenvolvida com HTML, CSS, e JavaScript, que simula uma experiência narrativa centrada no tema da Inteligência Artificial. O objetivo é engajar os jogadores em um cenário fictício que aborda o avanço da IA e suas possíveis consequências para a humanidade, destacando a importância da reflexão ética sobre a tecnologia.</p>
-                    <p>O HTML estrutura o conteúdo da página, dividindo-o em seções como a tela inicial, caixa de perguntas, alternativas de resposta, e o resultado final baseado nas escolhas do jogador. O CSS é utilizado para estilizar a página, empregando um esquema de cores futurista e layout responsivo para melhorar a experiência do usuário. JavaScript é usado para adicionar interatividade ao jogo, manipulando o DOM para atualizar o conteúdo da página conforme as escolhas do jogador, e determinando o fluxo da narrativa através de uma série de perguntas e respostas.</p>
-                    <p>Os scripts JavaScript incluem módulos para gerar nomes aleatórios, definir as perguntas e as lógicas de jogo, como iniciar o jogo, apresentar perguntas e alternativas, processar as escolhas dos jogadores, e exibir o resultado final. Este design modular facilita a manutenção e a expansão futura do jogo. A importância das ferramentas utilizadas (HTML, CSS, JavaScript) reside na criação de uma experiência interativa que não apenas entretém, mas também educa os jogadores sobre a complexidade ética e social da IA, incentivando a reflexão crítica sobre o papel da tecnologia em nossas vidas.</p>
-                    <img src="img/projeto-2.png" class="img-fluid w-100" alt="Imagem representativa do projeto de uma biblioteca online">
+                    <p>1. Crie as cartas:
+                     Desenhe os sprites:
+                     Crie um sprite para representar a carta. Você pode usar um retângulo com cores diferentes para
+                      o fundo e o contorno. 
+                     Defina os valores e naipes:
+                     Use listas para armazenar os valores (e.g., "Ás", "2", "3", ..., "Rei") e os naipes (e.g., "Ouros",
+                      "Copas", "Espadas", "Paus") das cartas. 
+                     Crie variáveis:
+                     Crie variáveis para armazenar o valor e o naipe de cada carta, ou armazene essas informações em uma
+                      lista de listas (baralho). 
+                    </p>
+                    <p>2. Crie o baralho:
+                     Preencha a lista do baralho: Use laços de repetição para adicionar todas as combinações possíveis
+                      de valor e naipe à lista do baralho.
+                     Embaralhe o baralho: Utilize a função "embaralhar" do Scratch para misturar as cartas.
+                     </p>
+                    <p>3. Crie a lógica do jogo:
+                     Distribua as cartas:
+                     Use laços de repetição para distribuir cartas para os jogadores, removendo-as do baralho e
+                     adicionando-as às mãos dos jogadores.
+                     Crie regras:
+                     Defina as regras do jogo, como pontuação, movimentos dos jogadores, interação com o usuário, etc.
+                     </p>
+                    <p>4. Desenvolva a interface:
+                     Use variáveis: Exiba informações como pontuação, número de cartas na mão, etc. 
+                     Use clones: Crie clones dos sprites de cartas para exibir as cartas na tela. 
+                     Crie botões: Adicione botões para iniciar o jogo, embaralhar as cartas, etc. 
+                    </p>
+                    <img src="img/projeto-2.png" class="img-fluid w-100"
+                        alt="Imagem representativa do projeto de uma biblioteca online">
                 </div>
                 <div class="modal-footer">
-                    <a href="https://femascheti.github.io/tecnicas-computacionais-refletindo-sobre-ia/">Ver projeto ao vivo</a>
-                    <a href="https://github.com/femascheti/tecnicas-computacionais-refletindo-sobre-ia">Ver código do projeto</a>
+                    <a href="https://scratch.mit.edu/projects/985709641">Ver projeto ao vivo</a>
                 </div>
             </div>
         </div>
@@ -106,6 +177,43 @@ Aqui está o código atualizado a partir da linha 17, substituindo o nome "Ferna
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title">Explorando o Universo: Uma Aventura Interativa em Astronomia com Scratch</h5>
-                    <button type="button" class="btn-close" data-bs-dismiss="
-```
+                    <h5 class="modal-title">Funções: desenvolvendo um recomendador de filmes com JavaScript.</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <p>1. Configuração (setup):
+                     Cria a tela (canvas) com createCanvas().
+                     Cria elementos de entrada (inputs) como campos de texto para idade, checkboxes para gêneros, etc.,
+                     usando createElement(), createInput(), createCheckbox(), etc. 
+                     Define o layout inicial da interface, por exemplo, adicionando títulos e legendas.
+                     </p>
+                    <p>2. Desenho (draw):
+                     Esta função é executada continuamente e é responsável por atualizar a interface visual. 
+                     Pode exibir informações relevantes, como a recomendação atual, com text().
+                     Pode atualizar a cor de fundo com background(), ou outras propriedades visuais com as funções do p5.js. 
+                     </p>
+                    <p>3. Função de Recomendação (geraRecomendacao):
+                     Recebe as entradas do usuário (idade, preferências de gênero, etc.) como parâmetros. 
+                     Contém a lógica para decidir qual filme recomendar com base nas entradas do usuário. 
+                     Retorna o nome do filme recomendado como uma string. </p>
+                    <img src="img/projeto-3.png" alt="Projeto 3" class="img-fluid w-100">
+                </div>
+                <div class="modal-footer">
+                    <a href="https://editor.p5js.org/AnaLuiza1D/sketches/K_tWhigoa">Ver projeto ao vivo</a>
+                </div>
+            </div>
+        </div>
+    </div>
+    <footer class="container py-5">
+        <h2>Entre em contato</h2>
+        <div>
+            <i class="bi bi-github"></i>
+            <a href="https://github.com/AnaLuiza1D">GitHub</a>
+        </div>
+        <p class="my-5 text-center">© Copyright 2025. Produzido por Ana Chaves</p>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+
+</html>
